--- a/LoodsmanAdapters.csproj
+++ b/LoodsmanAdapters.csproj
@@ -36,14 +36,16 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiAdapterBase.cs" />
     <Compile Include="ApiAdapter.cs" />
     <Compile Include="ApplicationAdapter.cs" />
-    <Compile Include="ConnectionAdapter.cs" />
+    <Compile Include="IApiAdapter.cs" />
+    <Compile Include="IApplicationAdapter.cs" />
+    <Compile Include="IWbsSystemAdapter.cs" />
+    <Compile Include="IWfblAdapter.cs" />
     <Compile Include="PluginCallBack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WBSSystemAdapter.cs" />
-    <Compile Include="WFBLAdapter.cs" />
+    <Compile Include="WbsSystemAdapter.cs" />
+    <Compile Include="WfblAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="Ask">
@@ -128,5 +130,6 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
